log
Wed 24 Apr 2024 01:39:17 AM UTC: 
 tests:  0|6
total_score: 0/70
1d3c93b
Wed 24 Apr 2024 05:47:19 PM UTC: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:69: error: comparison between pointer and integer [-Werror]
   45 |   if (map->buckets[position] == NULL || map->buckets[position]->key == -1)
      |                                                                     ^~
cc1: all warnings being treated as errors
Compilation failed
5e97ee7
Wed 24 Apr 2024 05:48:48 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
9aed451
Wed 24 Apr 2024 05:54:03 PM UTC: 
 hashmap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:62:26: error: ‘Pair’ has no member named ‘next’
   62 |         current = current->next;
      |                          ^~
hashmap.c:65:12: error: ‘Pair’ has no member named ‘next’
   65 |     current->next = newElem;
      |            ^~
Compilation failed
2a13681
Wed 24 Apr 2024 05:59:59 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:62:26: error: ‘Pair’ has no member named ‘next’
   62 |         current = current->next;
      |                          ^~
Compilation failed
a221e5b
Wed 24 Apr 2024 06:01:51 PM UTC: 
 hashmap.c | 15 +++++----------
 1 file changed, 5 insertions(+), 10 deletions(-)
 tests:  1|6
total_score: 10/70
8fe5ac6
Wed 24 Apr 2024 06:05:03 PM UTC: 
 hashmap.c | 14 +++++++++-----
 1 file changed, 9 insertions(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:62:26: error: ‘Pair’ has no member named ‘next’
   62 |         current = current->next;
      |                          ^~
hashmap.c:65:12: error: ‘Pair’ has no member named ‘next’
   65 |     current->next = newElem;
      |            ^~
Compilation failed
d61abfb
Wed 24 Apr 2024 06:11:07 PM UTC: 
 hashmap.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
 tests:  4|5
total_score: 20/70
7c8d0a3
Wed 24 Apr 2024 06:13:44 PM UTC: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
09ea9a7
